--- a/aws_Ec2/tasks/main.yml
+++ b/aws_Ec2/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for aws_Ec2
 - vars_files:
-    - pass.yml
+    - /home/ec2-user/ansible/pass.yml
 - name: start an instance with a public IP address
   amazon.aws.ec2_instance:
     name: "public-compute-instance_ansible"
