--- a/aws_playbook.yml
+++ b/aws_playbook.yml
@@ -10,7 +10,7 @@
   tasks:
   - name: start an instance with a public IP address
     amazon.aws.ec2_instance:
-      name: "ansible-instance"
+      name: "new_ansible-instance"
       # key_name: "prod-ssh-key"
       # vpc_subnet_id: subnet-013744e41e8088axx
       instance_type: t2.micro
