--- a/aws_playbook.yml
+++ b/aws_playbook.yml
@@ -20,7 +20,7 @@
       aws_secret_key: "{{ec2_secret_key}}"  # From vault as defined
       network:
         assign_public_ip: true
-      image_id: ami-0f918f7e67a3323f0
+      image_id: {{ item }}
     loop:
       - "ami-0f918f7e67a3323f0"
       - "ami-0f918f7e67a3323f0"
