--- a/aws_Ec2/tasks/main.yml
+++ b/aws_Ec2/tasks/main.yml
@@ -2,25 +2,23 @@
 # tasks file for aws_Ec2
 # - vars_files:
 #     - /home/ec2-user/ansible/pass.yml
-- name: start an instance with a public IP address
-  amazon.aws.ec2_instance:
-    name: "public-compute-instance_ansible"
-    # key_name: "prod-ssh-key"
-    # vpc_subnet_id: subnet-5ca1ab1e
-    instance_type: t2.micro
-    security_group: default
-    region: ap-south-1
-    aws_access_key: "{{ec2_access_key}}"
-    aws_secret_key: "{{ec2_secret_key}}"
-    
-    network_interfaces:
-      - assign_public_ip: true
-    image_id: ami-0f918f7e67a3323f0
-
+  - name: start an instance with a public IP address
+    amazon.aws.ec2_instance:
+      name: "new_ansible-instance"
+      # key_name: "prod-ssh-key"
+      # vpc_subnet_id: subnet-013744e41e8088axx
+      instance_type: t2.micro
+      security_group: default
+      region: ap-south-1
+      aws_access_key: "{{ec2_access_key}}"  # From vault as defined
+      aws_secret_key: "{{ec2_secret_key}}"  # From vault as defined
+      network:
+        assign_public_ip: true
+      image_id: {{ item }}
+      tags:
+        Environment: Testing
     loop:
       - "ami-0f918f7e67a3323f0"
       - "ami-0f918f7e67a3323f0"
       - "ami-0144277607031eca2"
-
-    tags:
-      Environment: Testing
+      
