--- a/aws_playbook.yml
+++ b/aws_playbook.yml
@@ -8,7 +8,7 @@
 
   become: yes  # Run tasks with sudo
   tasks:
-  - name: start an instance with a public IP address
+ - name: start an instance with a public IP address
     amazon.aws.ec2_instance:
       name: "new_ansible-instance"
       # key_name: "prod-ssh-key"
@@ -20,10 +20,13 @@
       aws_secret_key: "{{ec2_secret_key}}"  # From vault as defined
       network:
         assign_public_ip: true
-      image_id: {{ item }}
+      image_id: "{{ item }}"
+      tags:
+        Environment: Testing
     loop:
       - "ami-0f918f7e67a3323f0"
       - "ami-0f918f7e67a3323f0"
       - "ami-0144277607031eca2"
-      tags:
-        Environment: Testing
+
+    
+      
