--- a/aws_playbook.yml
+++ b/aws_playbook.yml
@@ -1,32 +1,28 @@
+
 ---
-- name: start an instance
+- name: Start EC2 instances
   hosts: localhost
   connection: local
+  become: yes
 
   vars_files:
     - pass.yml
 
-  become: yes  # Run tasks with sudo
   tasks:
- - name: start an instance with a public IP address
-    amazon.aws.ec2_instance:
-      name: "new_ansible-instance"
-      # key_name: "prod-ssh-key"
-      # vpc_subnet_id: subnet-013744e41e8088axx
-      instance_type: t2.micro
-      security_group: default
-      region: ap-south-1
-      aws_access_key: "{{ec2_access_key}}"  # From vault as defined
-      aws_secret_key: "{{ec2_secret_key}}"  # From vault as defined
-      network:
-        assign_public_ip: true
-      image_id: "{{ item }}"
-      tags:
-        Environment: Testing
-    loop:
-      - "ami-0f918f7e67a3323f0"
-      - "ami-0f918f7e67a3323f0"
-      - "ami-0144277607031eca2"
-
-    
-      
+    - name: Start EC2 instances with public IPs
+      amazon.aws.ec2_instance:
+        name: "new_ansible-instance"
+        instance_type: t2.micro
+        security_group: default
+        region: ap-south-1
+        aws_access_key: "{{ ec2_access_key }}"
+        aws_secret_key: "{{ ec2_secret_key }}"
+        network:
+          assign_public_ip: true
+        image_id: "{{ item }}"
+        tags:
+          Environment: Testing
+      loop:
+        - "ami-0f918f7e67a3323f0"
+        - "ami-0f918f7e67a3323f0"
+        - "ami-0144277607031eca2"
