--- a/aws_playbook.yml
+++ b/aws_playbook.yml
@@ -19,9 +19,9 @@
         aws_secret_key: "{{ ec2_secret_key }}"
         network:
           assign_public_ip: true
-        image_id: "{{ item }}"
+        image_id: "{{ item.image }}"
         tags:
-          Environment: Testing
+          Environment: "{{ item.name }}"
       loop:
         - {{image: "ami-0f918f7e67a3323f0", name: "node-1"}}
         - {{image: "ami-0f918f7e67a3323f0", name: "node-2"}}
